package fr.fges;

public interface DayPolicy {
    boolean isWeekend();
}
