classDiagram

    class Menu {
        -UserInput input
        -MenuActions actions
        +Menu(GameRepository)
        +handleMenu()
        -displayMainMenu()
        -handleChoice(String)
    }

    class MenuActions {
        -UserInput input
        -GameRepository repository
        -GamePrinter printer
        -Random random
        -DayPolicy dayPolicy
        +isWeekend() boolean
        +addGame()
        +removeGame()
        +listAllGames()
        +recommendGame()
        +weekendSummary()
        +exit()
        -exitApplication()
        -readGameFromUser() BoardGame
    }

    class GameRepository {
        +addGame(BoardGame)
        +removeGame(BoardGame)
        +getGames() List~BoardGame~
        +isEmpty() boolean
        +findCompatibleGames(int) List~BoardGame~
    }

    class BoardGame {
        +title() String
        +minPlayers() int
        +maxPlayers() int
        +category() String
    }

    class UserInput {
        +readChoice() String
        +getString(String) String
        +getIntAtLeast(String, int) int
        +getIntAtLeastOther(String, int) int
    }

    class GamePrinter {
        +viewAllGames(GameRepository)
    }

    class DayPolicy {
        <<interface>>
        +isWeekend() boolean
    }

    class SystemDayPolicy {
        +isWeekend() boolean
    }

    Menu --> MenuActions : delegates actions
    MenuActions --> UserInput : reads user input
    MenuActions --> GameRepository : manages games
    MenuActions --> GamePrinter : displays games
    MenuActions --> BoardGame : creates / uses
    MenuActions --> DayPolicy : checks day type
    SystemDayPolicy ..|> DayPolicy : implements
